--- a/references.bib
+++ b/references.bib
@@ -254,3 +254,36 @@ Google Researchgate
 	pages={401--408},
 	year={2011}
 }
+
+@article{yin,
+	title={Using social media to enhance emergency situation awareness},
+	author={Yin, Jie and Lampert, Andrew and Cameron, Mark and Robinson, Bella and Power, Robert},
+	journal={IEEE Intelligent Systems},
+	volume={27},
+	number={6},
+	pages={52--59},
+	year={2012}
+}
+
+@inproceedings{caragea,
+	title={Classifying text messages for the haiti earthquake},
+	author={Caragea, Cornelia and McNeese, Nathan and Jaiswal, Anuj and Traylor, Greg and Kim, Hyun-Woo and Mitra, Prasenjit and Wu, Dinghao and Tapia, Andrea H and Giles, Lee and Jansen, Bernard J and others},
+	booktitle={Proceedings of the 8th international conference on information systems for crisis response and management (ISCRAM2011)},
+	year={2011},
+	organization={Citeseer}
+}
+@inproceedings{imran2014a,
+	title={AIDR: Artificial intelligence for disaster response},
+	author={Imran, Muhammad and Castillo, Carlos and Lucas, Ji and Meier, Patrick and Vieweg, Sarah},
+	booktitle={Proceedings of the 23rd International Conference on World Wide Web},
+	pages={159--162},
+	year={2014},
+	organization={ACM}
+}
+
+@article{ashktorab,
+	title={Tweedr: Mining twitter to inform disaster response},
+	author={Ashktorab, Zahra and Brown, Christopher and Nandi, Manojit and Culotta, Aron},
+	journal={Proc. of ISCRAM},
+	year={2014}
+}
