--- a/proposal.tex
+++ b/proposal.tex
@@ -525,6 +525,9 @@ This research will contribute to the goal of providing emergency management agen
 % footnotes above bottom floats. This can be corrected via the
 % \fnbelowfloat command of the stfloats package.
 
+\section{Research Design}
+\section{Data Analysis}
+\section{Schedule}
 
 
 
@@ -534,7 +537,7 @@ Hardware capacity is required for storing datasets. Using Twitter as an example,
 Since this study does not seek to create any algorithms, implementations of the selected supervised learning algorithms will be required.
 
 
-
+\section{Deliverables}
 
 
 % conference papers do not normally have an appendix
