Start on Research Design.

--- a/proposal.tex
+++ b/proposal.tex
@@ -526,6 +526,8 @@ This research will contribute to the goal of providing emergency management agen
 % \fnbelowfloat command of the stfloats package.
 
 \section{Research Design}
+\subsection {Event and Subevent Detection}
+The goal of this phase of the research is to be able to obtain results of methods for event and subevent detection found in literature. This study will use one of two approaches for achieving this goal. The first possibility is to locate a data source where output from a detection system can be retrieved. If this is not possible, the second option would be to implement a detection system from previous literature capable of producing the required data.
 \section{Data Analysis}
 \section{Schedule}
 
