--- a/proposal.tex
+++ b/proposal.tex
@@ -530,6 +530,22 @@ This research will contribute to the goal of providing emergency management agen
 The goal of this phase of the research is to be able to obtain results of methods for event and subevent detection found in literature. This study will use one of two approaches for achieving this goal. The first possibility is to locate a data source where output from a detection system can be retrieved. If this is not possible, the second option would be to implement a detection system from previous literature capable of producing the required data.
 \subsection{Disaster Dataset Procurement}
 From the data source identified in the previous section, a sample of data will be obtained. The sample size will be 50 subevents. If a data source is identified in the previous phase, a simple random sample of events in the data source large enough to yield at least 50 subevents will be chosen. If a detection system was implemented in the previous phase, the "Major Disaster Declarations" in 2016 available from FEMA will be considered the population.\footnote{https://www.fema.gov/disasters/grid/year/2016?field\_disaster\_type\_term\_tid\_1=All} From this population, a simple random sample of events large enough to yield at least 50 subevents will be chosen. Social media data from the selected events will be processed by the system implemented in the previous section in order to obtain the subevents. In the event that the obtainted sample contains more than 50 subevents, a subset of the sample will be randomly selected for the research such that the subset contains exactly 50 subevents.
+\subsection{Survey Emergency Management Officials}
+According to the United States Geological Survey, the United States has over 3000 counties or county equivalents (boroughs, parishes, etc.).\footnote{https://www2.usgs.gov/faq/categories/9799/2971} A simple random sample of 2000 of these counties will be selected and contacted to seek willingness to participate in a survey. Willing counties will then be sent a survey. A response rate of 20\% would yield a sample of 400 counties or county equivalents.
+
+The surveys will ask participants to assign each of the 50 subevents in the sample a priority on a 5 point scale:
+\begin{enumerate}
+	\item Critical - This subevent requires immediate attention from emergency responders reassigning people and resources if necessary.
+	\item High - This subevent requires attention from emergency responders within 1 day
+	\item Medium - This subevent requires attention from emergency responders within 1 week
+	\item Low - This subevent requires attention from emergency responders but can be addressed outside of a 1 week time frame.
+	\item None - This subevent does not require attention from emergency responders.
+\end{enumerate}
+This scale is arbitrary, but it is used so that respondents all use the same scale for ranking the events. It does not include description such as 'potential loss of life' or 'damage to infrastructure' because this survey seeks to determine how these factors influence prioritization.
+
+The survey will present the subevents grouped by events. The order of the subevents will be randomized within their groups and events will be presented in random order.
+
+This portion of the research will need Institutional Review Board approval because human subjects will be responding to the surveys.
 \section{Data Analysis}
 \section{Schedule}
 
@@ -598,4 +614,5 @@ Does IEEE references get a section number
 Cross Validation design?
 list out algos
 italicize system names
+plagiarism
 /end{comment}
