--- a/proposal.tex
+++ b/proposal.tex
@@ -546,6 +546,11 @@ This scale is arbitrary, but it is used so that respondents all use the same sca
 The survey will present the subevents grouped by events. The order of the subevents will be randomized within their groups and events will be presented in random order.
 
 This portion of the research will need Institutional Review Board approval because human subjects will be responding to the surveys.
+\subsection{Algorithm Comparison Experiments}
+A cross-validation approach will be used for comparing the selected algorithms' performance. The subevents will be randomly divided into 5 groups of 10 subevents. From the 5 groups of subevents, 4 groups will be chosen as the training set and 1 group will be chosen as the validation set. Each algorithm will be trained using the subevents from the groups in the training sets and their respective priorities determined by the survey. Then each algorithm will be used to assign a priority to each subevent in the validation set. Each of these assignments will be correct or incorrect as determined by the survey data, and each algorithm will receive a score from 0 to 10 corresponding to the number of correct classifications. This procedure will be repeated for 4 times such that each group is used once as the validation set.
+
+This process will be repeated 99 times with a new random selection of the 5 groups of subevents each time.
+
 \section{Data Analysis}
 \section{Schedule}
 
