Deliverables and Data Analysis

--- a/proposal.tex
+++ b/proposal.tex
@@ -319,7 +319,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{A Study on Supervised Learning Algorithms for Processing Social Media Data In Mass Emergencies}
+\title{Supervised Learning Algorithms for Prioritizing Social Media Data In Mass Emergencies}
 
 
 % author names and affiliations
@@ -400,7 +400,7 @@ The primary goal of this study is to determine the viability of selected supervi
 In order to prioritize subevents, a set of subevents first needs to be identified. An event, identified by time and location, serves as the context for subevents \cite{Pohl}, thus events must be detected before any subevents can be identified. The objective of this portion of the project is to use techniques developed in a selection of past research in order to create a system that can be used in order to identify events and subevents from raw social media data. This system will be used to produce the sets of subevents that will later have a priority assigned.
 \subsection{Disaster Dataset Procurement}
 Samples of data from social media sources during emergency events will be collected. Events and subevents must be able to be detected by the system described previously. Since this study does not seek to analyze or improve event and subevent identification, datasets with no relevant events or subevents or difficult to detect events or subevents are not required.
-\subsection{Survey Emergency Management Officials}
+\subsection{Survey of Emergency Management Officials}
 Prioritization of subevents requires the ability to make the determination that one subevent is more important than another subevent and should be prioritized higher. This data will come from emergency responders who determine priorities regularly. A survey will be used to seek information from these people. It will also ask respondents to assign priorities to subevents in samples from the datasets acquired previously.
 \subsection{Algorithm Comparison Experiments}
 In order to compare the algorithms, the data obtained from the survey of emergency management officials will serve two purposes. First, portions of the data will be used as training data for the supervised learning algorithms. Secondly, a different portion of the survey data will be used as true values for evaluating the performance of each selected algorithm. Performance metrics will be calculated for each algorithm and analyzed in order to identify any statistically significant differences in performance.
@@ -530,7 +530,7 @@ This research will contribute to the goal of providing emergency management agen
 The goal of this phase of the research is to be able to obtain results of methods for event and subevent detection found in literature. This study will use one of two approaches for achieving this goal. The first possibility is to locate a data source where output from a detection system can be retrieved. If this is not possible, the second option would be to implement a detection system from previous literature capable of producing the required data.
 \subsection{Disaster Dataset Procurement}
 From the data source identified in the previous section, a sample of data will be obtained. The sample size will be 50 subevents. If a data source is identified in the previous phase, a simple random sample of events in the data source large enough to yield at least 50 subevents will be chosen. If a detection system was implemented in the previous phase, the "Major Disaster Declarations" in 2016 available from FEMA will be considered the population.\footnote{https://www.fema.gov/disasters/grid/year/2016?field\_disaster\_type\_term\_tid\_1=All} From this population, a simple random sample of events large enough to yield at least 50 subevents will be chosen. Social media data from the selected events will be processed by the system implemented in the previous section in order to obtain the subevents. In the event that the obtainted sample contains more than 50 subevents, a subset of the sample will be randomly selected for the research such that the subset contains exactly 50 subevents.
-\subsection{Survey Emergency Management Officials}
+\subsection{Survey of Emergency Management Officials}
 According to the United States Geological Survey, the United States has over 3000 counties or county equivalents (boroughs, parishes, etc.).\footnote{https://www2.usgs.gov/faq/categories/9799/2971} A simple random sample of 2000 of these counties will be selected and contacted to seek willingness to participate in a survey. Willing counties will then be sent a survey. A response rate of 20\% would yield a sample of 400 counties or county equivalents.
 
 The surveys will ask participants to assign each of the 50 subevents in the sample a priority on a 5 point scale:
@@ -552,6 +552,14 @@ A cross-validation approach will be used for comparing the selected algorithms' 
 This process will be repeated 99 times with a new random selection of the 5 groups of subevents each time.
 
 \section{Data Analysis}
+There will be no data analysis for the Event and Subevent Detection or Disaster Dataset Procurement. The Survey of Emergency Management Officals and Algorithm Comparison Experiments will both include data analysis.
+\subsection{Survey of Emergency Management Officials}
+The results of the survey will be used for training and validating the learning algorithms. This will require a single priority value for each subevent. Since the 5 point scale used for rating the priority is an example of ordinal data, the median will be computed for the responses for each subevent. These medians will be used as the true priority of each subevent during training and validation.
+\subsection{Algorithm Comparison Experiments}
+The experimental design in this study will be a within subject designs. That is multiple treatments will be applied to the same experimental group one at a time. In this case, the experimental group will be a set of data divided into a training set and a validation set. The treatments will be the supervised learning algorithms. The observations will be the scores out of 10 achieved by each algorithm.
+
+Since 100 selections of subevent groups are used and each algorithm receives 5 scores per selection, each algorithm will have 500 total scores. The means of each algorithm's scores will be compared using Student's T-Tests to determine whether statistically significant differences exist in the performance of the algorithms.
+
 \section{Schedule}
 
 
@@ -559,32 +567,11 @@ This process will be repeated 99 times with a new random selection of the 5 grou
 \section{Facilities and Special Resources}
 Hardware capacity is required for storing datasets. Using Twitter as an example, a single data object occupies around 4KB including metadata \cite{Imran}. One dataset investigated in \cite{vieweg2014} contained millions of data objects. The processing resources need to be powerful enough to run the algorithms for event and subevent detection as well as the selected supervised learning algorithms in the allotted time.
 
-Since this study does not seek to create any algorithms, implementations of the selected supervised learning algorithms will be required.
+Implementations of the selected supervised learning algorithms will be required so that they can be evaluated.
 
 
-\section{Deliverables}
-
-
-% conference papers do not normally have an appendix
-
-
-% use section* for acknowledgment
-\section*{Acknowledgment}
-
-
-The authors would like to thank...
-
-
-
-
-
-% trigger a \newpage just before the given reference
-% number - used to balance the columns on the last page
-% adjust value as needed - may need to be readjusted if
-% the document is modified later
-%\IEEEtriggeratref{8}
-% The "triggered" command can be changed if desired:
-%\IEEEtriggercmd{\enlargethispage{-5in}}
+\section{Deliverable}
+The deliverable of this study will be technical report including a conclusion on the performance of the selected supervised learning algorithms for prioritizing subevents in a mass emergency.
 
 % references section
 
@@ -615,9 +602,7 @@ In special resources ask for a specialist to do the surveying! or design questio
 It is a source not THE source to go with *1
 why we don't need IRB in research design
 Criterion for comparison
-Does IEEE references get a section number
-Cross Validation design?
 list out algos
 italicize system names
-plagiarism
+plagiarism including example proposal in facilities
 /end{comment}
