--- a/proposal.tex
+++ b/proposal.tex
@@ -561,7 +561,17 @@ The experimental design in this study will be a within subject designs. That is 
 Since 100 selections of subevent groups are used and each algorithm receives 5 scores per selection, each algorithm will have 500 total scores. The means of each algorithm's scores will be compared using Student's T-Tests to determine whether statistically significant differences exist in the performance of the algorithms.
 
 \section{Schedule}
-
+The schedule for this project spans 12 months and contains 1 month of flex time to compensate for any parts of the research that take longer than estimated. The schedule is detailed below.
+\begin{itemize}
+	\item Event and Subevent Detection - 1/1 to 1/31  
+	\item Dataset Procurement - 2/1 to 3/15  
+	\item Survey of Emergency Management Officials - 3/16 to 6/15  
+	\item Setup of Algorithms - 6/16 to 7/15 
+	\item Algorithm Experiments - 7/16 to 9/30 
+	\item Data Analysis and Conclusions - 6/16 to 7/15 \& 10/1 to 10/31 
+	\item Report Generation - 11/1 to 11/30 
+	\item Flex Time - 12/1 to 12/31 
+\end{itemize}	
 
 
 \section{Facilities and Special Resources}
@@ -597,11 +607,10 @@ Definition Section in section I
 ;Prediction algo approach 
 ;what criteria for prioritization
 do I like the bit about types of disasters in problem description
-External validity maybe the survey
-In special resources ask for a specialist to do the surveying! or design questions
+;External validity maybe the survey
 It is a source not THE source to go with *1
-why we don't need IRB in research design
-Criterion for comparison
+;why we don't need IRB in research design
+;Criterion for comparison
 list out algos
 italicize system names
 plagiarism including example proposal in facilities
