--- a/proposal.tex
+++ b/proposal.tex
@@ -422,7 +422,7 @@ Events can, in many cases, be divided into refined parts called subevents \cite{
 In \cite{Khurdiya}, a method for identifying subevents using Conditional Random Fields is proposed. In \cite{Pohl,Hua}, subevent detection methods employing clustering techniques are proposed. Cluster distance is suggested in \cite{Pohl} for finding the most important items (e.g. pictures or videos) within a subevent cluster, but no method is proposed for prioritizing the clusters themselves.
 
 \subsection{Supervised Learning Algorithms}
-Previous studies have employed various supervised learning algorithms to classify data retrieved from social media. ESA \cite{yin}  uses naïve Bayes and SVM to determine if the data contains information on impacted infrastructure. EMERSE \cite{caragea} classifies data according to the type of situation such as medical emergency, people trapped, etc. AIDR \cite{Imran2014a} uses random forests to extract data objects that are considered informative. Tweedr \cite{ashktorab} uses logistic regression to extract tweets that contain damage or casualty information. Although each of these studies applies a supervised learning algorithm to its respective datasets, none of them use the learning algorithm in order to assign priority to subevents.
+Previous studies have employed various supervised learning algorithms to classify data retrieved from social media. ESA \cite{yin}  uses na\"{i}ve Bayes and SVM to determine if the data contains information on impacted infrastructure. EMERSE \cite{caragea} classifies data according to the type of situation such as medical emergency, people trapped, etc. AIDR \cite{Imran2014a} uses random forests to extract data objects that are considered informative. Tweedr \cite{ashktorab} uses logistic regression to extract tweets that contain damage or casualty information. Although each of these studies applies a supervised learning algorithm to its respective datasets, none of them use the learning algorithm in order to assign priority to subevents.
 
 \section{Importance/Benefits of the Study}
 Research on processing social media data for emergency management should be conducted in order to enable officials to use this data during disaster situations. Emergency responders have expressed interest in taking advantage of social media as a data source, but have been largely unable to do so due to the nature of the data.
@@ -566,7 +566,7 @@ The schedule for this project spans 12 months and contains 1 month of flex time 
 	\item Event and Subevent Detection - 1/1 to 1/31  
 	\item Dataset Procurement - 2/1 to 3/15  
 	\item Survey of Emergency Management Officials - 3/16 to 6/15  
-	\item Setup of Algorithms - 6/16 to 7/15 
+	\item Advanced Research \& Setup of Algorithms - 6/1 to 7/15 
 	\item Algorithm Experiments - 7/16 to 9/30 
 	\item Data Analysis and Conclusions - 6/16 to 7/15 \& 10/1 to 10/31 
 	\item Report Generation - 11/1 to 11/30 
