Remove Abstract, Add Subtitle, Add Department of CS

--- a/proposal.tex
+++ b/proposal.tex
@@ -319,7 +319,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Supervised Learning Algorithms for Prioritizing Social Media Data In Mass Emergencies}
+\title{Supervised Learning Algorithms for Prioritizing Social Media Data In Mass Emergencies: \\ A Research Proposal}
 
 
 % author names and affiliations
@@ -327,6 +327,7 @@
 % affiliations
 \author{\IEEEauthorblockN{Matthew Smith}
 \IEEEauthorblockA{College of Sciences and Humanities\\
+Department of Computer Science\\
 Ball State University\\
 Muncie, Indiana 47306\\
 Email: mjsmith17@bsu.edu}}
@@ -365,11 +366,6 @@ Email: mjsmith17@bsu.edu}}
 % make the title area
 \maketitle
 
-% As a general rule, do not put math, special symbols or citations
-% in the abstract
-\begin{abstract}
-The abstract goes here.
-\end{abstract}
 
 % no keywords
 
