Research objective revisions

--- a/proposal.tex
+++ b/proposal.tex
@@ -393,9 +393,9 @@ This work will seek to evaluate and compare selected supervised learning algorit
 \section{Research Objectives}
 The primary goal of this study is to determine the viability of selected supervised learning algorithms for predicting the priority of subevents during a disaster event. Additionally, this study seeks to identify statistically significant differences in the performance of various selected algorithms. New algorithms will not be designed. Instead, known algorithms that have already been designed are used.
 \subsection{Event and Subevent Detection}
-In order to prioritize subevents, a set of subevents first needs to be identified. An event, identified by time and location, serves as the context for subevents \cite{Pohl}, thus events must be detected before any subevents can be identified. The objective of this portion of the project is to use techniques developed in a selection of past research in order to create a system that can be used in order to identify events and subevents from raw social media data. This system will be used to produce the sets of subevents that will later have a priority assigned.
+In order to prioritize subevents, a set of subevents first needs to be identified. An event, identified by time and location, serves as the context for subevents \cite{Pohl}, thus events must be detected before any subevents can be identified. The objective of this portion of the project is to locate a source of subevent data. The source should obtain its data from subevent detection techniques from previous research.
 \subsection{Disaster Dataset Procurement}
-Samples of data from social media sources during emergency events will be collected. Events and subevents must be able to be detected by the system described previously. Since this study does not seek to analyze or improve event and subevent identification, datasets with no relevant events or subevents or difficult to detect events or subevents are not required.
+From the data source identified in the previous portion of the project, a sample of detected subevents will be selected in this in this phase of the research. Since this study does not seek to analyze or improve event or subevent detection, the sample need not contain examples of data without any relevant events.
 \subsection{Survey of Emergency Management Officials}
 Prioritization of subevents requires the ability to make the determination that one subevent is more important than another subevent and should be prioritized higher. This data will come from emergency responders who determine priorities regularly. A survey will be used to seek information from these people. It will also ask respondents to assign priorities to subevents in samples from the datasets acquired previously.
 \subsection{Algorithm Comparison Experiments}
