Preliminary Revisions to Research Design

--- a/proposal.tex
+++ b/proposal.tex
@@ -523,7 +523,7 @@ This research will contribute to the goal of providing emergency management agen
 
 \section{Research Design}
 \subsection {Event and Subevent Detection}
-The goal of this phase of the research is to be able to obtain results of methods for event and subevent detection found in literature. This study will use one of two approaches for achieving this goal. The first possibility is to locate a data source where output from a detection system can be retrieved. If this is not possible, the second option would be to implement a detection system from previous literature capable of producing the required data.
+The goal of this phase of the research is to be able to obtain results of methods for event and subevent detection found in literature. This study will use one of two approaches for achieving this goal. The first possibility is to locate a data source where results of subevent detection systems can be retrieved. If this is not possible, the second option would be to implement a detection system from previous literature capable of producing the required data.
 \subsection{Disaster Dataset Procurement}
 From the data source identified in the previous section, a sample of data will be obtained. The sample size will be 50 subevents. If a data source is identified in the previous phase, a simple random sample of events in the data source large enough to yield at least 50 subevents will be chosen. If a detection system was implemented in the previous phase, the "Major Disaster Declarations" in 2016 available from FEMA will be considered the population.\footnote{https://www.fema.gov/disasters/grid/year/2016?field\_disaster\_type\_term\_tid\_1=All} From this population, a simple random sample of events large enough to yield at least 50 subevents will be chosen. Social media data from the selected events will be processed by the system implemented in the previous section in order to obtain the subevents. In the event that the obtainted sample contains more than 50 subevents, a subset of the sample will be randomly selected for the research such that the subset contains exactly 50 subevents.
 \subsection{Survey of Emergency Management Officials}
