Revisions to Schedule and Facilities

--- a/proposal.tex
+++ b/proposal.tex
@@ -567,11 +567,12 @@ The schedule for this project spans 12 months and contains 1 month of flex time 
 	\item Data Analysis and Conclusions - 6/16 to 7/15 \& 10/1 to 10/31 
 	\item Report Generation - 11/1 to 11/30 
 	\item Flex Time - 12/1 to 12/31 
-\end{itemize}	
+\end{itemize}
+The Data Analysis and Conclusions item is scheduled for two time spans. The first of these is for analysis of the results of the survey of emergency management officials. The second is for the analysis of the results of the algorithm experiments.	
 
 
 \section{Facilities and Special Resources}
-Hardware capacity is required for storing datasets. Using Twitter as an example, a single data object occupies around 4KB including metadata \cite{Imran}. One dataset investigated in \cite{vieweg2014} contained millions of data objects. The processing resources need to be powerful enough to run the algorithms for event and subevent detection as well as the selected supervised learning algorithms in the allotted time.
+Hardware capacity is required for storing datasets. Using Twitter as an example, a single data object occupies around 4KB including metadata \cite{Imran}. One dataset investigated in \cite{vieweg2014} contained millions of data objects. The processing resources need to be powerful enough to run the algorithms for event and subevent detection if necessary as well as the selected supervised learning algorithms in the allotted time.
 
 Implementations of the selected supervised learning algorithms will be required so that they can be evaluated.
 
